--- a/5th-frontend/01.html/step01_text.html
+++ b/5th-frontend/01.html/step01_text.html
@@ -3,32 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Step 01: Text</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>text</title>
 </head>
+<body>
+    <h1>제목 1</h1>
+    <h2>제목 2</h2>
+    <h6>제목 6</h6>
 
-    <body>
-        <h1>제목 1</h1>
-        <h2>제목 2</h2>
-        <h3>제목 3</h3>
-        <h4>제목 4</h4>
-        <h5>제목 5</h5>
-        <h6>제목 6</h6>
+    <hr>
 
-        <hr>
-        <p>이것은 단락입니다. HTML에서 단락은 <code>&lt;p&gt;</code> 태그로 감싸집니다.</p>
-        <b>이것은 굵은 글씨입니다.</b> 글씨
-        <i>이탤릭 이것은 기울임 글씨입니다.</i> 글씨
-        <strong>이것은 강조된 글씨입니다.</strong>
-        <em>이것은 이탤릭체로 강조된 글씨입니다.</em>
-        <hr>
-        
-        <h3 style="color: gold;">글자 색상</h3>
-        <h3 style="font-size: 24px;">글자 크기</h3>
-        <br>
-        <a href="step02_image_link.html">step02</a>
-        
+    <p>단락</p>
+    <p>단락</p>
 
+    <hr>
 
-    </body>
+    <b>굵은</b> 글씨
+    <strong>굵은</strong> 글씨
+    <i>이탤릭</i>체
+    <em>이탤릭</em>체
+
+    <hr>
+
+    <h3 style="color: gold;">글자 색상</h3>
+    <h3 style="font-size: 24px;">글자 크기</h3>
+</body>
 </html>
