--- a/5th-frontend/01.html/step04_list_table_p.html
+++ b/5th-frontend/01.html/step04_list_table_p.html
@@ -8,15 +8,25 @@
 </head>
 
 <body>
+    <h2>학과목록</h2>
     <ul>
-        <li>리스트</li>
-        <li>리스트</li>
+        <li>컴퓨터공학</li>
+        <li>전자공학</li>
     </ul>
 
+    <h2>수강신청 절차</h2>
     <ol type="I">
-        <li>물을 끓인다</li>
-        <li>스프를 넣는다</li>
+        <li>로그인</li>
+        <li>검색</li>
     </ol>
+
+    <h2>웹 프로그래밍 기초</h2>
+    <dl>
+        <dt>교수</dt>
+        <dd>김개발</dd>
+        <dt>강의실</dt>
+        <dd>공학관 301</dd>
+    </dl>
 
     <hr>
     <table border="1">
