--- a/5th-frontend/01.html/step05_form.html
+++ b/5th-frontend/01.html/step05_form.html
@@ -8,55 +8,62 @@
 <body>
     <form action="">
         <label for="user-name">유저 이름</label>
-        <input type="text" name="name" id="user-name" placeholder="이름을 입력하세요">
-        <button type="submit">제출</button>     <p>
-        <button type="">X</button>
+        <input type="text" name="uname" id="user-name" placeholder="이름을 입력하세요">
+        <button type="submit">버튼</button>
     </form>
+
+    <button type="button" aria-label="창닫기">X</button>
+
     <hr>
-    <select name="" id="">
-        <option value="" selected>차종선택</option>
+
+    <select name="car" id="">
+        <option value="" selected disabled>차종선택</option>
         <optgroup label="독일브랜드">
-            <option value="de1">벤츠</option>
-            <option value="de2">BMW</option>
-            <option value="de3">폭스바겐</option>
-        </optgroup>
-        <optgroup label="한국브랜드">
-            <option value="kor1">현대</option>
-            <option value="kor2">기아</option>
+            <option value="audi">아우디</option>
         </optgroup>
         <optgroup label="스웨덴브랜드">
-            <option value="sw1">스포르트</option>
+            <option value="volvo">볼보</option>
         </optgroup>
     </select>
 
     <hr>
-    <label for="feedback">의견 남겨주세요</label><p></p> 
-    <textarea name="story" id="story" cols="30" rows="10" 
-    placeholder="당신의 이야기를 들려주세요"></textarea>
-    <hr>
-    <form action="" method="post">
-        id: <input type="text" name="id"><br>
-        pw: <input type="password" name="pw"><br>
-    </form>
 
-    <form action="">
-        checkbox:
-        <input type="checkbox" name="" value="Bike"> I have a
-    </form>
-    <hr>
-    <h1>네이버 검색 서비스 </h1>
-    <form action="https://search.naver.com/search.naver" method="get" target="_blank">
-        <input type="text" name="query" id="" placeholder="검색어를 입력하세요">
-        <button type="submit">검색</button>
-    </form>
-    <hr>
-    <h1>구글검색 서버</h1>
-    <form action="https://www.google.com/search" method="get" target="_blank">
-        <input type="text" name="q" id="" placeholder="검색어를 입력하세요">
-        <button type="submit">검색</button>
-    </form>
+<label for="feedback">의견 남겨주세요</label>
+<textarea 
+    name="feedback" 
+    id="feedback"
+    placeholder="의견 남겨주세요"
+    rows="5"
+    cols="40"
+    maxlength="100">
+</textarea>
 
+<hr>
+<form action="" method="post">
+    ID : <input type="text" name="uid" id="uid">
+    PW : <input type="password" name="uid" id="uid">
+</form>
+
+<hr>
+<form action="" method="post">
+    <input type="checkbox" name="favorite-animal" id="" value="dog">강아지
+    <input type="checkbox" name="favorite-animal" id="" value="cat">고양이
+</form>
+
+<hr>
+<h1>네이버 검색 서버</h1>
+<form action="https://search.naver.com/search.naver" method="get">
+    <input type="text" name="query" id="">
+    <input type="submit" value="검색">
+</form>
+
+<hr>
+<h1>구글 검색 서버</h1>
+<form action="https://www.google.com/search" method="get">
+    <input type="text" name="q" id="">
+    <input type="submit" value="검색">
+</form>
+
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
-
-    
 </html>
